# kintaro-api-client

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: available-methods.md
kintaro_client/: __init__.py  client.py  constants.py  exceptions.py  utils.py
kintaro_client/models/: __init__.py  base.py  collection.py  document.py  repository.py  resource.py  schema.py  workspace.py
kintaro_client/services/: __init__.py  base.py  collection.py  document.py  repository.py  resource.py  schema.py  workspace.py
